# faim-ipa

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml  test_and_deploy.yml
examples/: Add Segmentation.ipynb  CellVoyagerPlateExample.py  CellVoyagerStackAcquisitionExample.py  Create MoBIE Project for Single-Plane Zarr.ipynb  Create MoBIE Project for Z-Stack Zarr.ipynb  Create MoBIE Project.ipynb  Create ome-zarr from CellVoyager acquisition.ipynb  Create ome-zarr from Single-Plane Multi-Field Acquisition.ipynb  Create ome-zarr from Z-Stack Multi-Field Acquisition.ipynb  ImageXpressPlateExample.py  ImageXpressSinglePlaneAcquisitionExample.py  ImageXpressStackAcquisitionExample.py  ImageXpressStackeAcquisitionExample.py  Inspect Zarr.ipynb  TileStitchingExample.py  ZMBImageXpressMixedAcquisitionExample.py  ZMBImageXpressSinglePlaneAcquisitionExample.py  ZMBImageXpressStackAcquisitionExample.py  fractal_example.py  test-matthieu.py
examples/fractal/: fractal_example.py  meta_create_ome_zarr_md.json  meta_md_to_ome_zarr.json
examples/hdf5-to-zarr/: HDF5-to-Zarr.ipynb  benchmark.py  benchmark_FS.py  benchmark_ZIP.py  pixi.toml  slurm-benchmark.sh
resources/: legacy_hist.npz
resources/CV8000/CV8000-Minimal-DataSet-2C-3W-4S-FP2-stack_20230918_135839/CV8000-Minimal-DataSet-2C-3W-4S-FP2-stack/: 1009680001_Cellvis_#P96-1.5H-N.wpp  CV8000-Minimal-DataSet-2C-3W-4S-FP2-stack.wpi  CV8000-Minimal-DataSet-2C-3W-4S-FP2-stack_D08_T0001F002L01A01Z03C01.tif  MeasurementData.mlf  MeasurementDetail.mrf  Minimal-3C3W2S-FP2-stack.mes  crosstalk_parameter.xml  geometry_parameter.xml
resources/ImageXpress/: exp126-d0_C03_thumbA6B0784C-19ED-4F35-9E6A-0A306794BB11.tif
resources/ImageXpress_ZMB/MetaXpress/9987_Plate_3420/: 9987.HTD
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_1/: 9987_B02_s1_w1.TIF
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_2/: 9987_B02_s1_w2.TIF  9987_B02_s2_w2.TIF
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_3/: 9987_B02_s2_w1.TIF  9987_B03_s1_w2.TIF
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_4/: 9987_B03_s1_w1.TIF
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_5/: 9987_B02_s2_w1.TIF
resources/ImageXpress_exported/9987_Plate_3435/TimePoint_6/: 9987_B02_s1_w1.TIF  9987_B02_s1_w4.TIF  9987_B03_s2_w3.TIF
resources/eicm/: MeasurementDetail.mrf  QC_dyes_60x__Cellvis_glass.mes  gradient-left-right.tif  gradient-top-bottom.tif
resources/ome-tiff/: 20241003_experiment_488_7_640_3_1.companion.ome  c3_z33.companion.ome
src/faim_2p/: OMETiffTools.py  README.md  ometiffmerge.py
src/faim_hcs/: CellVoyagerUtils.py  ImageUtils2D.py  MetaSeriesUtils.py  MetaSeriesUtils_dask.py  MontageUtils.py  UIntHistogram.py  Zarr.py  __FRACTAL_MANIFEST__.json  dask_utils.py  demo_processor.py  fractal_create_ome_zarr.py  fractal_create_ome_zarr_md.py  fractal_md_to_ome_zarr.py  fractal_md_well_to_ome_zarr.py  mobie.py  roi.py  spot.py  utils.py
src/faim_hcs/alignment/: __init__.py  alignment.py
src/faim_hcs/fractal/: README.md  fractal_create_ome_zarr_md.py  fractal_md_to_ome_zarr.py
src/faim_hcs/hcs/: Experiment.py  acquisition.py  converter.py  plate.py
src/faim_hcs/io/: ChannelMetadata.py  ImageXpress.py  MetaSeriesTiff.py  MolecularDevicesImageXpress.py  YokogawaCellVoyager.py  acquisition.py  metadata.py
src/faim_hcs/records/: DefaultRecord.py  OrganoidRecord.py  PlateRecord.py  WellRecord.py
src/faim_hcs/roitable/: FractalROITable.py
src/faim_hcs/stitching/: BoundingBox.py  BoundingBox5D.py  DaskTileStitcher.py  Tile.py  __init__.py  stitching_utils.py
src/faim_hcs/visiview/: RegionAcquisition.py  StackedTile.py  ome_companion_utils.py
src/faim_ipa/: dask_utils.py  demo_processor.py  histogram.py  metaseries_utils_dask.py  mobie.py  processor.py  utils.py  zarr_utils.py
src/faim_ipa/alignment/: __init__.py  alignment.py
src/faim_ipa/detection/: blobs.py  spots.py  utils.py
src/faim_ipa/hcs/: acquisition.py  converter.py  plate.py  source.py
src/faim_ipa/io/: ChannelMetadata.py  MetaSeriesTiff.py  metadata.py
src/faim_ipa/pixi/: cache_status.py  log_commit.py  src_status.py
src/faim_ipa/roitable/: FractalROITable.py
src/faim_ipa/stitching/: BoundingBox5D.py  DaskTileStitcher.py  __init__.py  dask.py  stitching_utils.py  tile.py
src/faim_ipa/visiview/: RegionAcquisition.py  StackedTile.py  __init__.py  acquisition.py  ome_companion_utils.py
tests/: test_CellVoyagerUtils.py  test_ImageUtils2D.py  test_MetaSeriesUtils.py  test_MetaSeriesUtils_dask.py  test_TileStitcher.py  test_UIntHistogram.py  test_Zarr.py  test_dask_utils.py  test_metaseries_utils_dask.py  test_mobie.py  test_utils.py
tests/alignment/: test_alignment.py
tests/detection/: test_blobs.py  test_detection_utils.py  test_spots.py  test_utils.py
tests/eicm/: test_gaussian2D_fit.py  test_polynomial_fit.py  test_preprocessing.py
tests/fractal/: test_fractal_tasks.py
tests/hcs/: test_acquisition.py  test_converter.py  test_plate.py
tests/hcs/cellvoyager/: files.csv  test_CellVoyagerWellAcquisition.py  test_StackAcquisition.py  test_ZAdjustedStackAcquisition.py  test_stack_acquisition.py  test_well_acquisition.py  test_z_adjusted_stack_acquisition.py
tests/hcs/imagexpress/: files.csv  test_ImageXpress.py  test_ImageXpressWellAcquisition.py  test_plate_acquisitions.py  test_plate_acquisitions_exported.py  test_well_acquisition.py
tests/hcs/imagexpress_ZMB_MetaXpress/: test_plate_acquisitions.py
tests/io/: test_ChannelMetadata.py  test_ImageXpress.py  test_MetaSeriesTiff.py  test_MolecularDevicesImageXpress.py  test_YokogawaCellVoyager.py  test_metaseries.py
tests/pixi/: test_pixi.py  test_pixi_utils.py
tests/records/: test_WellRecord.py
tests/roitable/: test_FractalROITable.py
tests/stitching/: test_BoundingBox.py  test_Tile.py  test_TileStitcher.py  test_bounding_box.py  test_dask.py  test_stitching_utils.py
tests/visiview/: test_ome_companion_utils.py
(+348 files in other folders)
