[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "faim-ipa"
dynamic = ["version"]
description = 'Tools used at FMI-FAIM for Image Processing and Analysis.'
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Tim-Oliver Buchholz", email = "tim-oliver.buchholz@fmi.ch" },
  { name = "Jan Eglinger", email = "jan.eglinger@fmi.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "anndata>=0.8.0,<=0.9.2",
  "dask",
  "distributed",
  "fsspec<=2023.6.0",
  "imagecodecs",
  "lxml",
  "matplotlib",
  "mobie@git+https://github.com/mobie/mobie-utils-python@0.4.5",
  "numpy",
  "ome-zarr",
  "pandas",
  "pint",
  "pydantic==1.10.13",
  "scikit-image>=0.20.0",
  "threadpoolctl",
  "tifffile",
  "tqdm",
  "zarr",
]

[project.urls]
"Bug Tracker" = "https://github.com/fmi-faim/faim-ipa/issues"
Documentation = "https://github.com/fmi-faim/faim-ipa#README.md"
Homepage = "https://github.com/fmi-faim/faim-ipa.git"
"Source Code" = "https://github.com/fmi-faim/faim-ipa"
"User Support" = "https://github.com/fmi-faim/faim-ipa/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/faim_ipa tests}"

[tool.hatch.build.targets.wheel]
packages = ["src/faim_ipa"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source_pkgs = ["faim_ipa", "tests"]
branch = true
parallel = true
omit = [
  "src/faim_ipa/__about__.py",
]

[tool.coverage.paths]
faim_hcs = ["src/faim_ipa", "*/faim-ipa/src/faim_ipa"]
tests = ["tests", "*/faim-ipa/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.setuptools_scm]
write_to = "src/faim_ipa/_version.py"
