[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "faim-ipa"
dynamic = ["version"]
description = 'Tools used at FMI-FAIM for Image Processing and Analysis.'
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = []
authors = [
  {name = "Tim-Oliver Buchholz", email = "tim-oliver.buchholz@fmi.ch"},
  {name = "Jan Eglinger", email = "jan.eglinger@fmi.ch"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "defusedxml",
  "distributed",
  "matplotlib",
  "numpy",
  "ome-zarr",
  "pandas",
  "pint",
  "pydantic>=2",
  "questionary",
  "scikit-image",
  "tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/fmi-faim/faim-ipa/issues"
Documentation = "https://github.com/fmi-faim/faim-ipa#README.md"
Homepage = "https://github.com/fmi-faim/faim-ipa.git"
"Source Code" = "https://github.com/fmi-faim/faim-ipa"
"User Support" = "https://github.com/fmi-faim/faim-ipa/issues"

[tool.coverage.paths]
faim_ipa = ["src/faim_ipa", "*/faim-ipa/src/faim_ipa"]
tests = ["tests", "*/faim-ipa/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.run]
source_pkgs = ["faim_ipa", "tests"]
branch = true
parallel = true
omit = [
  "src/faim_ipa/__about__.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/examples",
  "/resources",
  "*/__pycache__",
  "/tests",
  "/scratchpad",
  "/.github",
  ".pre-commit-config.yaml",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-mock",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov-html = [
  "test-cov",
  "- coverage combine",
  "coverage html",
]
cov-xml = [
  "test-cov",
  "- coverage combine",
  "coverage xml",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/faim_ipa tests}"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
ignore = ["FA100", "S101"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*" = ["F811", "INP001", "SLF001"]
"**/examples/*" = ["INP001"]

[tool.setuptools_scm]
write_to = "src/faim_ipa/_version.py"

[tool.typos.default]
extend-ignore-words-re = [
  # Hexadecimal identifiers in file names
  "^[A-F0-9]*$",
]

[tool.typos.default.extend-words]
ome = "ome"
