[metadata]
name = faim_hcs
description = Tools used at FMI-FAIM to handle HCS data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/faim-hcs.git
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/faim-hcs/issues
    Documentation = https://github.com/fmi-faim/faim-hcs#README.md
    Source Code = https://github.com/fmi-faim/faim-hcs
    User Support = https://github.com/fmi-faim/faim-hcs/issues

[options]
packages = find:
install_requires =
    anndata>=0.8.0,<=0.9.2
    fsspec<=2023.6.0
    imagecodecs
    matplotlib
    numpy
    ome-zarr
    pandas
    scikit-image>=0.20.0
    tifffile
    tqdm
    zarr
python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
